--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/demo
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
-
+server.port=8080
 # JPA properties
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
